[gd_scene load_steps=7 format=3 uid="uid://bd7d7mib4ndgh"]

[ext_resource type="Script" path="res://Models/Bullet/bullet.gd" id="1_0xr0h"]

[sub_resource type="BoxMesh" id="BoxMesh_fjg2c"]
size = Vector3(0.05, 0.05, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yp7pa"]
albedo_color = Color(1, 0.909804, 0.239216, 1)
emission_enabled = true
emission = Color(1, 0.909804, 0.239216, 1)
emission_energy_multiplier = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ixhnu"]
albedo_color = Color(1, 0.909804, 0.239216, 1)
emission_enabled = true
emission = Color(1, 0.909804, 0.239216, 1)
emission_energy_multiplier = 8.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5e8qb"]
direction = Vector3(0, 0, 1)
initial_velocity_min = 3.0
initial_velocity_max = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_mmgw8"]
size = Vector3(0.04, 0.04, 0.04)

[node name="Bullet" type="Node3D"]
script = ExtResource("1_0xr0h")

[node name="BulletMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("BoxMesh_fjg2c")
surface_material_override/0 = SubResource("StandardMaterial3D_yp7pa")

[node name="BulletRayCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00565049)
target_position = Vector3(0, 0, -0.6)
collision_mask = 2
collide_with_areas = true

[node name="ParticleEmission" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.598439)
material_override = SubResource("StandardMaterial3D_ixhnu")
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_5e8qb")
draw_pass_1 = SubResource("BoxMesh_mmgw8")

[node name="BulletAutomaticDespawnTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="BulletAutomaticDespawnTimer" to="." method="_on_bullet_automatic_despawn_timer_timeout"]
